--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="./styles.css" >
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="symbol.png" type="image/x-icon">
     <!---------------------------- fonts  ------------------------->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,13 +22,11 @@
     <!--------------------------- Head ------------------------>
     <header>
       <div id='logo'>
-        <img src="./images/Norah . Knots Logo.png">
-      </div>
+        <!-- <img src="./images/Norah . Knots Logo.png">-->
+        <h5> Norah Knots </h5>
+      </div> 
+
       <div class= 'flex-box'>
-        <!-- <div id='logo'>
-          <img src="./images/Norah . Knots Logo.png">
-          Norah Knots
-        </div> -->
         
         <nav>
           <div class="navBox"><a href="#mission">Mission</a></div>
