changed logo again

--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
   <body>
     <!--------------------------- Head ------------------------>
     <header>
-      <div id='logo'>
-        <!-- <img src="./images/Norah . Knots Logo.png">-->
+      <!-- <div id='logo'>
+        
         <h5> Norah Knots </h5>
-      </div> 
+      </div>  -->
 
       <div class= 'flex-box'>
-        
+        <div id='logo'>
+          <!-- <img src="./images/Norah . Knots Logo.png">-->
+          <h5> Norah Knots </h5>
+        </div> 
         <nav>
           <div class="navBox"><a href="#mission">Mission</a></div>
           <div class="navBox"><a href="#products">Products</a></div>
